# Multi-LMC_Optimization

./: .gitignore  LICENSE.md  README.md  requirements.txt
multi_lmc/: README.md
multi_lmc/data/Subject1/: Interp_LMC_Naiv_Static101.txt  Interp_LMC_Naiv_Static201.txt  Interp_LMC_Naiv_Trial101.txt  Interp_LMC_Naiv_Trial102.txt  LMC_Naiv_Static101.txt  LMC_Naiv_Static201.txt  LMC_Naiv_Trial101.txt  LMC_Naiv_Trial102.txt
multi_lmc/ext_lib/Ultraleap/LeapSDK/samples/: CMakeLists.txt
multi_lmc/lib/cmake/LeapSDK/: leapsdk-configVersion.cmake
multi_lmc/src/: CMakeLists.txt  MultiDeviceSampleCPP.cpp  MultiLMC_Interpolate.cpp  MultiLMC_Plot.cpp
multi_lmc/src/Linking/: multiLMC_process.cpp  multiLMC_process.h
optimization/: LMC_Trial_rayTracing.ipynb  LMC_optimization.ipynb  README.md  Static.txt
optimization/Python/: LMC_util.py  optimization.py  plotUtil.py  ray_tracing_util.py
optimization/data/LMC_raw/Subject1/Naiv/: Interp_LMC_Naiv_Static101.txt  Interp_LMC_Naiv_Static102.txt
optimization/data/LMC_raw/Subject1/Opti/: Interp_LMC_Opti_Static101.txt  Interp_LMC_Opti_Static102.txt
optimization/data/LMC_rayTracing/Subject1/Naiv/: Interp_LMC_Naiv_Static101.txt  Interp_LMC_Naiv_Static102.pkl  Interp_LMC_Naiv_Static102.txt
optimization/data/LMC_rayTracing/Subject1/Opti/: Interp_LMC_Opti_Static101.txt  Interp_LMC_Opti_Static102.pkl  Interp_LMC_Opti_Static102.txt
processing/: Extract.ipynb  LMC_Vicon_util.py  README.md
processing/data/_process_/Subject1/Naiv/: Interp_LMC_Naiv_Static101.pkl  Naiv_Static101.trc
processing/data/_process_/Subject1/Opti/: Interp_LMC_Opti_Static101.pkl  Opti_Static101.trc
processing/data/_result_/: Subject1_Naiv.txt  Subject1_Opti.txt
